# fwupd

./: meson_options.txt
.github/workflows/: ci.yml  codeql-analysis.yml  create_containers.yml  matrix.yml  pull-request-reviews.yml  scorecard.yml  snap.yml
contrib/: dump-mtd-ifd.py  fwupd.spec.in
contrib/ci/: dependencies.xml
data/installed-tests/: fwupd.sh
libfwupdplugin/: fu-udev-device.c  fu-udev-device.h  fwupdplugin.map
plugins/: meson.build
plugins/logitech-scribe/: README.md  fu-logitech-scribe-device.c  fu-logitech-scribe-device.h  logitech-scribe.quirk  meson.build
plugins/logitech-whiteboardcams/: README.md  fu-logitech-whiteboardcams-common.c  fu-logitech-whiteboardcams-common.h  fu-logitech-whiteboardcams-device.c  fu-logitech-whiteboardcams-device.h  fu-plugin-logitech-whiteboardcams.c  logitech-whiteboardcams.quirk  meson.build
plugins/synaptics-mst/: fu-synaptics-mst-device.c
plugins/uefi-capsule/: meson.build
plugins/wacom-raw/: fu-wacom-aes-device.c  fu-wacom-common.c  fu-wacom-common.h  fu-wacom-device.c  fu-wacom-device.h  fu-wacom-emr-device.c  fu-wacom-raw.rs  meson.build
src/: fu-util.c
